--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,22 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/*.js",
+      "src": "api/trade.js",
       "use": "@vercel/node"
     },
     {
-      "src": "pages/*.js",
-      "use": "@vercel/next"
+      "src": "public/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
     {
-      "src": "/api/(.*)",
-      "dest": "/api/$1"
+      "src": "/api/trade",
+      "dest": "/api/trade"
     },
     {
       "src": "/(.*)",
-      "dest": "/pages/$1"
+      "dest": "/public/$1"
     }
   ]
 }
